src/test/ui/rfc-2306/convert-id-const-no-gate.stderr
error: `std::convert::identity` is not yet stable as a const fn
  --> $DIR/convert-id-const-no-gate.rs:6:22
   |
LL |     const _FOO: u8 = ::std::convert::identity(42u8);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: in Nightly builds, add `#![feature(const_convert_id)]` to the crate attributes to enable

error: aborting due to previous error

